Fix badge/whitespace

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -1828,7 +1828,7 @@ header ~ #messages {
   display: inline-block;
   position: relative;
   top: -1px;
-  margin-left: 2px;
+  margin-left: 4px;
   .transition(.1s background linear);
 
   &.new {
